@@ -1,5 +1,6 @@
 EBUILD calculate-install-gui-2.2.0.0_p20100902.ebuild 746 RMD160 d6814cef5ee1b2f845698a7c59c8edf65b9ee4d7 SHA1 da75aa0294f36fd1f2fa3e12479c52b4c191d978 SHA256 8fce2254fa8f213babdb9138554b34a1f6e94d5f173ab582fb1dcdc800941911
 EBUILD calculate-install-gui-2.2.0.0_p20100910-r1.ebuild 746 RMD160 70c6b04f35323fdbd4441451881e91a5ddc52dbe SHA1 c584fe5b8fefb58c8c2a8b3c7f585d3c18ddce89 SHA256 8ea9102871e025cbca3b6a734d31848214ed15ec8e209de38006562ec53c1287
+EBUILD calculate-install-gui-2.2.0.0_p20100920.ebuild 746 RMD160 490589be5d2fef2133f6736ca885c511de969f0f SHA1 1fb67518f579c145c6b911eafbe4dd370e2ac64a SHA256 6f69d7b60e1eccd757af024f713908a54efaa89383305f8b32a8b180eb832090
 EBUILD calculate-install-gui-2.2.9999.ebuild 700 RMD160 523695d636602b4c39ded773b5b28e70d169866b SHA1 31b061fd8d18bd72b0532a0da34ed516360efda5 SHA256 ec0e5c94233f4bc20aa839892d619625d560e51772f89e55a1d4c7d56501aa7a
-MISC ChangeLog 3383 RMD160 9d0206dae6f5772033260e83f5aff71d82e9b72e SHA1 4ee2b471399f5c8a286d87034e856742b0666f3a SHA256 40e81792d7b1b0e77eaa75b815558c845b606003c976051cad3660c70d86f3eb
+MISC ChangeLog 3571 RMD160 97a78f61a18ad5abc3c3136bfd865aed4ab1518f SHA1 b8bc2ff2416f4dabff1a8e54fdfaa703c14d7a8f SHA256 acfd252c7691021af1c1c60cf4a5b2bebedaa31ddd4cb4a6866d818473eb3261
 MISC metadata.xml 319 RMD160 c12d856d94a4bbba48275f44c4e9a0eae1ac6f21 SHA1 cddfe781ee5b88c7f5c94d7c5f03a07e61ae3336 SHA256 2a18634b4a257808c269e8c986462b316780c4f8b9a19c7c8b733fa3310a4147
