@@ -1,0 +1,1 @@
+~app-misc/calculate-install-gui-2.2.0.0_p20100920 amd64 x86
